# base-cluster-docs

./: .mkdocs.yml.swp  CONTRIBUTING.md  README.md  mkdocs.ideal.yml  mkdocs.yml  pyproject.toml  requirements.txt
docs/: getting-started.md  index.md
docs/Acronyms-Glossary/: acronyms.md  index.md
docs/accounts/: .index.md.swp  index.md  passwords.md
docs/applications/: index.md  index.md.save
docs/connect/: index.md
docs/environment/: index.md  modules.md
docs/filesystems/: index.md  quotas.md  schematic.md  scratch.md
docs/help/: acronyms.md
docs/jobs/: best-practices.md  index.md  interactive.md  monitoring.md  policy.md  reservations.md  troubleshooting.md  workflow-tools.md
docs/jobs/examples/: index.md
docs/jobs/examples/basic-mpi/cori-haswell-open-mpi/: basic-mpi.sh
docs/jobs/examples/basic-mpi/cori-knl-open-mpi/: basic-mpi.sh
docs/jobs/examples/burstbuffer/: stagein.sh
docs/jobs/examples/multiple-parallel-jobs/cori-haswell/: sequential-parallel-jobs.sh
docs/jobs/examples/variable-time-jobs/cori-haswell/: variable-time-jobs.sh
docs/jobs/examples/variable-time-jobs/cori-knl/: variable-time-jobs.sh  vasp-relaxation-job.sh
docs/jobs/gpus/: index.md
docs/jobs/workflow/: gnuparallel.md
docs/system/: index.md
docs/system/interconnect/: index.md
docs/system/timeline/: index.md
source/: accounts.md  conf.py  index.md  software.md  storage.md  systems.md  training.md
