[tool.poetry]
name = "base-cluster-docs"
version = "0.1.0"
description = "Base documentation system for DST"
authors = ["Andrew Kail <andrew.a.kail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
myst-parser = "^0.14.0"
sphinx-material = "^0.0.32"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
