[tool.poetry]
name = "base-cluster-docs"
version = "0.1.0"
description = "Base cluster documentation for DST"
authors = ["Andrew Kail <akail@datainscience.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.7"
mkdocs-macros-plugin = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
